# gaussdb-python

docs/: news.rst
gaussdb/: pyproject.toml
gaussdb/gaussdb/: _oids.py  _tz.py  errors.py  generators.py
gaussdb_sqlalchemy/: README.md  __init__.py  alembic.py  base.py  pyproject.toml
tests/: test_errors.py  test_generators.py
